added comment line

--- a/homework-1/index.html
+++ b/homework-1/index.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Sitede görünecek başlık -->
     <title>Homework - 1</title>
 </head>
 
 <body>
     <h1>Beyza Şahin</h1>
-
+    
+    <!-- Hakkımızda -->
     <h3>Hakkımda</h3>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatum cumque debitis suscipit beatae
         pariatur nihil, hic ratione illo, odit enim voluptates incidunt animi minus?</p>
 
-    <h2>Sevdiğim Dizilier</h2>
+    <!-- Sevdiğim Diziler -->
+    <h2>Sevdiğim Diziler</h2>
 
     <h3>The Walking Dead</h3>
 
